--- a/package.json
+++ b/package.json
@@ -5,8 +5,10 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "pack-win": "electron-packager . Thermowell-Design --overwrite --platform=win32 --arch=x64 --prune=true --out=release-builds",
-    "pack-osx": "electron-packager . Thermowell-Design --overwrite --platform=darwin --arch=x64 --prune=true --out=release-builds"
+    "pack-win": "electron-packager . Thermowell-Design --overwrite --platform=win32 --arch=x64 --icon=assets/images/icons/logo.ico --prune=true --out=release-builds",
+    "pack-osx": "electron-packager . Thermowell-Design --overwrite --platform=darwin --arch=x64 --icon=assets/images/icons/logo.icns --prune=true --out=release-builds",
+    "installer-osx": "npm run pack-osx && electron-installer-dmg ./release-builds/Thermowell-Design-darwin-x64/Thermowell-Design.app Thermowell-Design --icon=assets/images/icons/logo.icns --out=release-builds --overwrite",
+    "installer-win": "npm run pack-win && node installers/windows/createinstaller.js"
   },
   "repository": {
     "type": "git",
@@ -17,7 +19,9 @@
   "devDependencies": {
     "base64-img": "^1.0.4",
     "electron": "^5.0.0-beta.2",
-    "electron-packager": "^13.0.1"
+    "electron-installer-dmg": "^2.0.0",
+    "electron-packager": "^13.0.1",
+    "electron-winstaller": "^2.7.0"
   },
   "dependencies": {
     "base64-img": "^1.0.4",
